<resources>
    <string name="app_name">GearTrader</string>
    <string name="create_new_account">Create New Account</string>
    <string name="display_listings">Display Listings</string>
    <string name="enter_listing_title">Enter Listing Title:</string>
    <string name="return_to_main_activity">Return to Main Activity</string>
    <string name="title">title</string>
    <string name="enter_summary">Enter Summary:</string>
    <string name="summary">summary</string>
    <string name="enter_price">Enter Price (£) :</string>
    <string name="price">price</string>
    <string name="confirm">CONFIRM</string>
    <string name="enter_username">Enter Username:</string>
    <string name="username">username</string>
    <string name="enter_password">Enter Password:</string>
    <string name="password">password</string>
    <string name="enter_email">Enter Email:</string>
    <string name="email">email</string>
    <string name="refresh_listings">Refresh Listings</string>
    <string name="select_image">Select Image</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="select_location">Select Location</string>
    <string name="google_maps_key">AIzaSyD_U3RiRbjpUZ87dYgGoVUNoeRrCfskU6Q</string>
    <string name="open_location">Open Location</string>
    <string name="select_category">Select Category</string>
    <string name="sort_by_category">Sort By Category</string>
    <string name="take_picture">Take Picture</string>
</resources>