<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_grey200"
    tools:context="com.example.geartrader.LoginActivity">

    <Button
        android:id="@+id/openRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="37dp"
        android:layout_toEndOf="@+id/userEditTextView"
        android:layout_toRightOf="@+id/userEditTextView"
        android:text="@string/create_new_account"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="35dp"
        android:layout_toStartOf="@+id/userTextView"
        android:layout_toLeftOf="@+id/userTextView"
        android:gravity="center"
        android:text="Login below or: "
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userEditTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/userTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/openRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/enter_username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/passTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/userEditTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/enter_password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passEditTextView"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="@string/confirm" />

</RelativeLayout>